Protect endpoints with JWT
