# pets/server/api/services/users.service.js
@@ -5,9 +5,9 @@ class UsersService {
   async all() {
     l.info(`${this.constructor.name}.all()`);
     try {
-      const users = await User.find();
+      const users = await User.find().select('-password');
       return users;
-    } catch (err) {
+    } catch (error) {
       return error;
     }
   }
@@ -15,8 +15,8 @@ class UsersService {
   async byId(id) {
     l.info(`${this.constructor.name}.byId(${id})`);
     try {
-      const users = await User.findOne({ _id: id });
-      return users;
+      const user = await User.findOne({ _id: id }).select('-password');
+      return user;
     } catch (error) {
       return error;
     }
@@ -36,7 +36,7 @@ class UsersService {
   async update(id, body) {
     l.info(`${this.constructor.name}.update(${id})`);
     try {
-      const user = await User.findOneAndUpdate({ sub: sub }, body, {
+      const user = await User.findOneAndUpdate({ _id: id }, body, {
         new: true,
       });
       if (user) {
@@ -44,8 +44,8 @@ class UsersService {
       } else {
         return { error: 'User not found.' };
       }
-    } catch (err) {
-      return err;
+    } catch (error) {
+      return error;
     }
   }
 
@@ -54,8 +54,8 @@ class UsersService {
     try {
       const result = await User.deleteOne({ _id: id });
       return { result: !!result.n };
-    } catch (err) {
-      return err;
+    } catch (error) {
+      return error;
     }
   }
 }
